fix(Intent): Colors for component to be more dark mode compliant

--- a/stylus/components/modals.styl
+++ b/stylus/components/modals.styl
@@ -64,8 +64,8 @@ $modal
     border-radius rem(8)
     max-height 100%
     max-width 100%
-    background-color var(--white)
-    color var(--charcoalGrey)
+    background-color var(--paperBackgroundColor)
+    color var(--primaryTextColor)
 
 for size in 'xsmall' 'small' 'medium' 'large' 'xlarge' 'xxlarge'
     $modal--{size}
@@ -158,7 +158,7 @@ $modal-header-app
     display flex
     align-items center
     font-size rem(20)
-    color var(--charcoalGrey)
+    color var(--primaryTextColor)
 
 $modal-header-app-editor
     font-weight normal
@@ -288,7 +288,7 @@ $modal--hidden
 $modal-back-button
     top rem(6)
     left rem(6)
-    color var(--coolGrey)
+    color var(--actionColorActive)
 
     +small-screen()
         top 0
